# lab09

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  Dockerfile  README.md  RELEASE.md  REPORT.md  TASK.md
.github/workflows/: ci-cd.yml
solver_application/: CMakeLists.txt
tests/: transaction_test.cpp
